--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
     "prettier": "3.0.3",
-    "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   },
   "dependencies": {
     "@mantine/core": "^7.1.5",
     "@mantine/hooks": "^7.1.5",
+    "@mantine/vanilla-extract": "^7.1.5",
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
