--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@tsconfig/strictest": "2.0.2",
+    "@types/node": "20.8.9",
     "@types/react": "18.2.31",
     "@typescript-eslint/eslint-plugin": "6.8.0",
     "@typescript-eslint/parser": "6.8.0",
@@ -38,7 +39,7 @@
     "@mantine/core": "^7.1.5",
     "@mantine/hooks": "^7.1.5",
     "@mantine/vanilla-extract": "^7.1.5",
-    "next": "13.5.6",
+    "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
