chore: shadcn-uiを追加

--- a/package.json
+++ b/package.json
@@ -26,19 +26,14 @@
     "@types/react": "18.2.33",
     "@typescript-eslint/eslint-plugin": "6.8.0",
     "@typescript-eslint/parser": "6.8.0",
-    "autoprefixer": "^10.4.16",
     "concurrently": "8.2.2",
     "eslint": "8.52.0",
     "eslint-config-prettier": "9.0.0",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.0",
     "prettier": "3.0.3",
+    "shadcn-ui": "^0.4.1",
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "@mantine/core": "^7.1.5",
-    "@mantine/hooks": "^7.1.5",
-    "@mantine/vanilla-extract": "^7.1.5",
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
