--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   },
   "include": ["**/*", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
