--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tsconfig/strictest": "2.0.2",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
+    "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "6.8.0",
     "@typescript-eslint/parser": "6.8.0",
     "autoprefixer": "^10.4.16",
