--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -19,11 +19,9 @@
     "@types/node": "20.9.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "^18.2.14",
-    "autoprefixer": "^10.4.16",
     "concurrently": "8.2.2",
     "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.1",
-    "typescript": "5.2.2"
+    "postcss-preset-mantine": "^1.9.1"
   },
   "dependencies": {
     "@mantine/core": "^7.1.5",
