--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@packages/eslint-config": "workspace:*",
     "eslint-config-turbo": "1.10.7",
-    "turbo": "1.10.7"
+    "turbo": "1.10.7",
+    "typescript": "5.2.2"
   }
 }
