--- a/frontend/apps/astro/tsconfig.json
+++ b/frontend/apps/astro/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "extends": "astro/tsconfigs/strict",
+  "extends": "@packages/tsconfig/base.json",
+  "include": ["env.d.ts", "src/**/*"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react",
