--- a/frontend/apps/nextjs/package.json
+++ b/frontend/apps/nextjs/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "lint": "concurrently 'pnpm lint:tsc' 'pnpm lint:eslint' 'pnpm lint:prettier'",
+    "lint": "conc -c auto pnpm:lint:*",
     "lint:tsc": "tsc",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --cache --check .",
-    "format": "concurrently 'pnpm format:eslint' 'pnpm format:prettier'",
+    "format": "pnpm format:eslint && pnpm format:prettier",
     "format:eslint": "eslint --fix .",
     "format:prettier": "prettier --cache --write ."
   },
