--- a/frontend/apps/astro/tsconfig.json
+++ b/frontend/apps/astro/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@packages/tsconfig/base.json",
-  "include": ["env.d.ts", "src/**/*"],
+  "include": ["env.d.ts", "**/*"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react",
