chore: biomeによるjsonファイルのフォーマットが効かないのでprettierに任せる

--- a/.github/workflows/lint_check.yml
+++ b/.github/workflows/lint_check.yml
@@ -24,5 +24,9 @@ jobs:
           cache-dependency-path: "pnpm-lock.yaml"
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      - name: Setup Biome
+        uses: biomejs/setup-biome@v2
+        with:
+          version: "1.6.0"
       - name: Run linter
         run: pnpm lint
