--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -19,5 +19,10 @@
       "jsxQuoteStyle": "double",
       "quoteStyle": "single"
     }
+  },
+  "json": {
+    "formatter": {
+      "enabled": false
+    }
   }
 }
