chore: biome, prettier, stylelintの設定

--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -1,28 +1,31 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.6.0/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.6.3/schema.json",
   "organizeImports": {
     "enabled": true
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "space",
+    "lineWidth": 80
   },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "nursery": {
+        "useImportRestrictions": "error"
+      }
     }
   },
-  "formatter": {
-    "indentStyle": "space",
-    "indentWidth": 2
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
   },
   "javascript": {
     "formatter": {
-      "semicolons": "asNeeded",
-      "jsxQuoteStyle": "double",
-      "quoteStyle": "single"
-    }
-  },
-  "json": {
-    "formatter": {
-      "enabled": false
+      "quoteStyle": "single",
+      "semicolons": "asNeeded"
     }
   }
 }
