--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -44,7 +44,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "concurrently": "^8.2.2",
-    "vite": "^4.3.1"
+    "vite": "5.1.3"
   },
   "refine": {
     "projectId": "aUd0Dq-nzwOZL-o1fgZ3"
