--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -34,11 +34,11 @@
     "@packages/prettier-config": "workspace:*",
     "@packages/style-config": "workspace:*",
     "@packages/tsconfig": "workspace:*",
-    "@remix-run/dev": "^2.8.1",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "concurrently": "^8.2.2",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "@remix-run/dev": "2.8.1",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "concurrently": "8.2.2",
+    "vite": "5.1.3",
+    "vite-tsconfig-paths": "4.2.2"
   }
 }
