--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -22,17 +22,17 @@
     "format:css": "stylelint './src/**/*.{css,scss}' --fix"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.5.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
     "@refinedev/kbar": "^1.3.6",
+    "@refinedev/react-router-v6": "^4.5.5",
+    "@refinedev/simple-rest": "^5.0.1",
+    "axios": "^1.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
-    "@refinedev/simple-rest": "^5.0.1",
-    "@refinedev/react-router-v6": "^4.5.5",
-    "@auth0/auth0-react": "^1.5.0",
-    "axios": "^1.6.2"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@packages/biome-config": "workspace:*",
