--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,12 @@
     "migrate:apply:local": "wrangler d1 migrations apply web-app-template --local",
     "migrate:apply:remote": "wrangler d1 migrations apply web-app-template --remote",
     "lint": "conc -c auto bun:lint:*",
-    "lint:tsc": "tsc --noEmit"
+    "lint:tsc": "tsc --noEmit",
+    "lint:biome": "biome check .",
+    "lint:prettier": "prettier --check './**/*.{md,yml,yaml,json}'",
+    "fmt": "conc -c auto bun:fmt:*",
+    "fmt:biome": "biome format --write .",
+    "fmt:prettier": "prettier -w './**/*.{md,yml,yaml,json}'"
   },
   "dependencies": {
     "drizzle-orm": "^0.30.8",
@@ -18,6 +23,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240419.0",
+    "@packages/biome-config": "workspace:*",
+    "@packages/prettier-config": "workspace:*",
     "@packages/tsconfig": "workspace:*",
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.20.16",
