chore: add @hono/zod-openapi

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
     "fmt:prettier": "prettier -w './**/*.{md,yml,yaml,json}'"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^0.16.0",
     "drizzle-orm": "^0.30.8",
     "hono": "^4.2.5"
   },
