--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "wrangler dev ./src/index.ts",
     "deploy": "wrangler deploy --minify ./src/index.ts",
-    "migrate:gen": "drizzle-kit generate:sqlite --config=./drizzle.config.ts",
+    "migrate:gen": "drizzle-kit up --config=./drizzle.config.ts",
     "migrate:apply:local": "wrangler d1 migrations apply web-app-template --local",
     "migrate:apply:remote": "wrangler d1 migrations apply web-app-template --remote",
     "lint": "conc -c auto bun:lint:*",
@@ -15,10 +15,11 @@
     "lint:prettier": "prettier --check './**/*.{md,yml,yaml,json}'",
     "fmt": "conc -c auto bun:fmt:*",
     "fmt:biome": "biome format --write .",
-    "fmt:prettier": "prettier -w './**/*.{md,yml,yaml,json}'"
+    "fmt:prettier": "prettier -w './**/*.{md,yml,yaml,json}'",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "drizzle-orm": "^0.30.8",
+    "drizzle-orm": "^0.33.0",
     "hono": "^4.2.5"
   },
   "devDependencies": {
@@ -27,7 +28,7 @@
     "@packages/prettier-config": "workspace:*",
     "@packages/tsconfig": "workspace:*",
     "concurrently": "^8.2.2",
-    "drizzle-kit": "^0.24.0",
+    "drizzle-kit": "^0.24.1",
     "wrangler": "^3.51.2"
   }
 }
