feat: Drizzle Studioでlocal DBを参照できるようにする

--- a/apps/api/.env.sample
+++ b/apps/api/.env.sample
@@ -4,3 +4,5 @@ CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_DATABASE_ID=
 # To get token go to My profile -> API Tokens and create token with D1 edit permissions.
 CLOUDFLARE_D1_TOKEN=
+
+LOCAL_DB=true
