chore: convert bun to pnpm

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,17 +6,17 @@
   "type": "module",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "conc -c auto bun:dev:*",
+    "dev": "conc -c auto pnpm:dev:*",
     "dev:astro": "astro dev --port=3001",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "lint": "conc -c auto bun:lint:*",
+    "lint": "conc -c auto pnpm:lint:*",
     "lint:astro": "astro check",
     "lint:biome": "biome check .",
     "lint:tsc": "tsc --noEmit",
     "lint:prettier": "prettier --check './**/*.{astro,md,yml,yaml,json}'",
-    "fmt": "conc -c auto bun:fmt:*",
+    "fmt": "conc -c auto pnpm:fmt:*",
     "fmt:biome": "biome format --write .",
     "fmt:prettier": "prettier -w './**/*.{astro,md,yml,yaml,json}'"
   },
