--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,15 +10,13 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # packages下は設定ファイルしかないので、対象外にしてる
-        workspace: [apps/app, apps/admin]
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.node-version'
       - name: Install dependencies
-        run: bun install
+        run: pnpm install --no-frozen-lockfile
       - name: Run linter
-        run: bun workspace ${{ matrix.workspace }} lint
+        run: pnpm lint
