--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "conc -c auto bun:dev:*",
+    "dev": "conc -c auto pnpm:dev:*",
     "dev:app": "wrangler dev ./src/index.ts",
     "dev:studio": "drizzle-kit studio",
     "deploy": "wrangler deploy --minify ./src/index.ts",
     "migrate:gen": "drizzle-kit generate --config=./drizzle.config.ts",
     "migrate:apply:local": "wrangler d1 migrations apply web-app-template --local",
     "migrate:apply:remote": "wrangler d1 migrations apply web-app-template --remote",
-    "lint": "conc -c auto bun:lint:*",
+    "lint": "conc -c auto pnpm:lint:*",
     "lint:tsc": "tsc --noEmit",
     "lint:biome": "biome check .",
     "lint:prettier": "prettier --check './**/*.{md,yml,yaml,json}'",
-    "fmt": "conc -c auto bun:fmt:*",
+    "fmt": "conc -c auto pnpm:fmt:*",
     "fmt:biome": "biome format --write .",
     "fmt:prettier": "prettier -w './**/*.{md,yml,yaml,json}'",
     "studio": "drizzle-kit studio"
@@ -30,7 +30,7 @@
     "@packages/prettier-config": "workspace:*",
     "@packages/tsconfig": "workspace:*",
     "better-sqlite3": "^11.2.1",
-    "concurrently": "^9.0.0",
+    "concurrently": "9.0.1",
     "drizzle-kit": "^0.24.1",
     "wrangler": "^3.51.2"
   }
