--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "license": "UNLICENSED",
+  "packageManager": "pnpm@9.11.0",
   "scripts": {
-    "workspace": "bun ./scripts/workspace.ts"
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "lint:packageVersion": "syncpack list-mismatches",
+    "fmt": "turbo run fmt"
   },
   "devDependencies": {
     "@packages/biome-config": "workspace:*",
     "@packages/prettier-config": "workspace:*",
-    "@types/bun": "^1.0.12",
-    "bun": "^1.1.3",
-    "concurrently": "^9.0.0",
+    "concurrently": "9.0.1",
+    "syncpack": "^13.0.0",
+    "turbo": "2.2.3",
     "typescript": "5.6.2"
   }
 }
