--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: '.node-version'
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
       - name: Run linter
