--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@apps/admin",
+  "name": "admin",
   "version": "1.0.0",
   "private": true,
   "sideEffects": false,
@@ -7,12 +7,10 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "conc -c auto pnpm:dev:*",
-    "dev:astro": "astro dev --port=3001",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
+    "dev:next": "next dev -p 3000",
+    "build": "next build",
+    "start": "next start",
     "lint": "conc -c auto pnpm:lint:*",
-    "lint:astro": "astro check",
     "lint:biome": "biome check .",
     "lint:tsc": "tsc --noEmit",
     "lint:prettier": "prettier --check './**/*.{astro,md,yml,yaml,json}'",
@@ -21,23 +19,20 @@
     "fmt:prettier": "prettier -w './**/*.{astro,md,yml,yaml,json}'"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.9.2",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/ts-plugin": "^1.10.0",
     "@packages/biome-config": "workspace:*",
     "@packages/prettier-config": "workspace:*",
     "@packages/tsconfig": "workspace:*",
-    "concurrently": "9.0.1",
-    "prettier-plugin-astro": "^0.14.1",
-    "tailwindcss": "^3.4.10"
+    "@types/node": "22.7.9",
+    "@types/react": "18.3.12",
+    "concurrently": "9.0.1"
   },
   "dependencies": {
-    "@astrojs/react": "^3.6.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "astro": "^4.14.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "@chakra-ui/react": "3.0.0-next.32",
+    "@emotion/react": "11.13.3",
+    "next": "15.0.1",
+    "next-themes": "0.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "5.3.0"
   }
 }
