--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -1,12 +1,23 @@
 {
   "extends": "@packages/tsconfig/base.json",
   "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "skipLibCheck": true,
+    "jsx": "preserve",
     "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "target": "ES2017",
+    "allowJs": true
   },
-  "include": ["env.d.ts", "./src/**/*"],
+  "include": ["./src/**/*", "env.d.ts", ".next/types/**/*.ts"],
   "exclude": ["dist"]
 }
