feat: appはastro製にする

--- a/apps/app/biome.json
+++ b/apps/app/biome.json
@@ -1,4 +1,16 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.2/schema.json",
-  "extends": ["@packages/biome-config/biome"]
+  "extends": ["@packages/biome-config/biome"],
+  "overrides": [
+    {
+      "include": ["*.astro"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useConst": "off",
+            "useImportType": "off"
+          }
+        }
+      }
+    }
+  ]
 }
