--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -6,33 +6,44 @@
   "type": "module",
   "license": "UNLICENSED",
   "scripts": {
+    "gen": "conc -c auto pnpm:gen:*",
+    "gen:scss": "tcm src",
     "dev": "conc -c auto pnpm:dev:*",
-    "dev:next": "next dev -p 3000",
-    "build": "next build",
-    "start": "next start",
+    "dev:astro": "astro dev --port=3000",
+    "dev:scss": "tcm src --watch",
+    "build": "astro build",
     "lint": "conc -c auto pnpm:lint:*",
-    "lint:biome": "biome check .",
+    "lint:astro": "astro check",
+    "lint:biome": "pnpm dlx @biomejs/biome lint .",
     "lint:tsc": "tsc --noEmit",
     "lint:prettier": "prettier --check './**/*.{astro,md,yml,yaml,json}'",
     "fmt": "conc -c auto pnpm:fmt:*",
-    "fmt:biome": "biome format --write .",
+    "fmt:biome": "biome format --write --unsafe .",
     "fmt:prettier": "prettier -w './**/*.{astro,md,yml,yaml,json}'"
   },
-  "devDependencies": {
-    "@packages/biome-config": "workspace:*",
-    "@packages/prettier-config": "workspace:*",
-    "@packages/tsconfig": "workspace:*",
-    "@types/node": "22.7.9",
-    "@types/react": "18.3.12",
-    "concurrently": "9.0.1"
-  },
   "dependencies": {
+    "@astrojs/react": "3.6.2",
     "@chakra-ui/react": "3.0.0",
     "@emotion/react": "11.13.3",
+    "astro": "4.16.7",
+    "destyle.css": "4.0.1",
     "next": "15.0.1",
     "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "5.3.0"
+  },
+  "devDependencies": {
+    "@astrojs/check": "0.9.4",
+    "@astrojs/ts-plugin": "1.10.4",
+    "@packages/biome-config": "workspace:*",
+    "@packages/prettier-config": "workspace:*",
+    "@packages/tsconfig": "workspace:*",
+    "@types/node": "22.7.9",
+    "@types/react": "18.3.12",
+    "concurrently": "9.0.1",
+    "prettier-plugin-astro": "0.14.1",
+    "typed-css-modules": "0.9.1",
+    "typed-scss-modules": "8.0.1"
   }
 }
