--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,18 +21,18 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[css]": {
-    "editor.formatOnSave": false,
+    "editor.defaultFormatter": "biomejs.biome",
     "editor.codeActionsOnSave": {
       "source.fixAll.stylelint": "always"
     }
   },
   "[scss]": {
-    "editor.formatOnSave": false,
+    "editor.defaultFormatter": "biomejs.biome",
     "editor.codeActionsOnSave": {
       "source.fixAll.stylelint": "always"
     }
   },
-  "biome.lspBin": "./node_modules/.bin/biome",
+  "biome.lspBin": "./node_modules/@biomejs/biome/bin/biome",
   "stylelint.configBasedir": ".",
   "stylelint.validate": ["css", "scss"],
   "prettier.requireConfig": false,
