--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,5 +20,7 @@ jobs:
         uses: pnpm/action-setup@v4
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
+      - name: codegen
+        run: pnpm gen
       - name: Run linter
         run: pnpm lint
