--- a/apps/app/.gitignore
+++ b/apps/app/.gitignore
@@ -1,17 +1,14 @@
-# dependencies
 node_modules
 
-# TypeScript cache
-*.tsbuildinfo
+.cache
 
-# dotenv environment variable files
+# Build files
+/build
+/public/build
+
+# Environment variables
 .env
 
-# output
-dist/
-
-# Astro
-.astro
-
-# tcm
-*.css.d.ts
+## Panda
+styled-system
+styled-system-studio
